@@ -4,6 +4,9 @@
 Change pan window button to LMB
 Change pan view button to RMB
 Add panic esc for testing
+Add enter regular exit
+Revert pan window button to RMB
+Revert pan view button to RMB
 
 2019-04-25
 Add include header stb_image.h
